kubernetes/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/darchie4/devops-hand-in-g09a:main-backend
        ports:
        - containerPort: 9000
