kubernetes/deployment-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: ghcr.io/darchie4/devops-hand-in-g09a:main-frontend
        ports:
        - containerPort: 8081
