kubernetes/grafana.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  serviceName: "grafana-headless"
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-pv
          securityContext:
            runAsUser: 0
  volumeClaimTemplates:
    - metadata:
        name: grafana-pv
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: gp2
