kubernetes/prometheus.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus-deployment
  labels:
    app: prometheus-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  serviceName: "prometheus-service"  # You need to provide a serviceName for a StatefulSet
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
        # The prometheus-storage-volume using emptyDir has been removed here because it will be created by volumeClaimTemplates

  volumeClaimTemplates:
    - metadata:
        name: prometheus-storage-volume  # Use the same name as the one in volumeMounts
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: gp2
