kubernetes/grafana-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name:  grafana
spec:
  selector:
    app:  grafana
  type:  NodePort
  ports:
    - port: 3000
      targetPort: 3000
