kubernetes/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 32760
