kubernetes/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 32063
